# signal-box-analyzer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MIGRATION_GUIDE.md  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh
analyzer/: __init__.py  calculator.py  optimizer.py  report.py
analyzer/detectors/: __init__.py  autogen.py  base.py  langchain.py
api/: __init__.py  main.py
api/routes/: __init__.py  analyze.py  examples.py
api/services/: __init__.py  github.py
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: URLInput.tsx
frontend/src/pages/: Analysis.tsx  Home.tsx
frontend/src/services/: api.ts
