[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-box-analyzer"
version = "0.1.0"
description = "Transparent AI cost analysis web application built on Signal Box"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Signal Box Team", email = "team@signalbox.ai" },
]
keywords = [
    "ai-cost-analysis",
    "cost-optimization", 
    "autogen",
    "langchain",
    "crewai",
    "signal-box"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "signal-box @ git+https://github.com/wespiper/signal-box.git",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://analyzer.signalbox.ai"
Repository = "https://github.com/yourusername/signal-box-analyzer-app"
"Bug Tracker" = "https://github.com/yourusername/signal-box-analyzer-app/issues"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"